# ninja-dojo

./: .gitignore  ASSETS.md  ASSETS_GHIBLI.md  ASSETS_PIXEL.md  CLAUDE.md  CODEX_CHARTER.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/agents/: moji-planner.md
.dojo/: context.md
.github/workflows/: ci.yml
data/: world.json
docs/legacy/: cockpit-history.md
public/: index.html  styles.css  world.js
public/assets/dojo/characters/: maji_atlas.json  meji_atlas.json  meowts_atlas.json  miji_atlas.json  moji_atlas.json  muji_atlas.json  tyche_atlas.json
public/assets/village/: map.json
public/assets/village_ghibli_archive/buildings/: buildings.json
public/assets/village_ghibli_archive/effects/: effects.json
public/assets/village_ghibli_archive/tiles/: terrain.json
public/assets/village_ghibli_pr1_backup/characters/: characters.json
public/js/village/: main.js
public/js/village/data/: kunoichi-config.js  village-layout.js
scripts/: curl-tests.sh  generate-hut-interiors.py  generate-kunoichi-strips.py  generate-tyche-strips.py  ninja-dojo.service  pr1b-deploy.sh  pr1b-routing-plugin.diff  run-loop.sh  screenshot.mjs  worker-tests.mjs
scripts/pr1b-risky/: openclaw-routing-index.js  routing-config.json
src/: mission-engine.js  openclaw-bridge.js  personas.js  server.js  store.js  workers.js
src/dojo/: approval_card.py  builder.py  config.py  guard.py  memory.py  planner.py  reviewer.py  server.py  slack_handler.py  webhook_handler.py
tests/: conftest.py  test_guard.py  test_memory.py  test_planner.py  test_slack_parser.py
(+88 files in other folders)
