[project]
name = "dojo"
version = "0.1.0"
description = "Autonomous multi-agent build loop for Unice's repos"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "slack-bolt>=1.18",
  "slack-sdk>=3.27",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "pygithub>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
dojo-server = "dojo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dojo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]
